@@ -1,11 +1,17 @@
+using System;
 using ArC.CardGames.Predefined.Vanguard;
 using Godot;
 
 public partial class CardInfo : Control
 {
     Label CardName = null!;
+    Button ActivateButton = null!;
     RichTextLabel Skills = null!;
     LabelValueContainer Grade = null!, Power = null!, Critical = null!, Guard = null!;
+    VanguardCard CurrentCard = null!;
+
+    public bool ShowActivateButton { get; set; } = false;
+
     public override void _Ready()
     {
         CardName = GetNode<Label>($"%{nameof(CardName)}");
@@ -14,6 +20,13 @@ public partial class CardInfo : Control
         Critical = GetNode<LabelValueContainer>($"%{nameof(Critical)}");
         Guard = GetNode<LabelValueContainer>($"%{nameof(Guard)}");
         Skills = GetNode<RichTextLabel>($"%{nameof(Skills)}");
+        ActivateButton = GetNode<Button>($"%{nameof(ActivateButton)}");
+        ActivateButton.Pressed += OnActivateButtonPressed;
+    }
+
+    private void OnActivateButtonPressed()
+    {
+        ActivationPressed?.Invoke(CurrentCard);
     }
 
     public override void _GuiInput(InputEvent e)
@@ -25,8 +38,9 @@ public partial class CardInfo : Control
         }
     }
 
-    public void Show(VanguardCard card)
+    public void Show(VanguardCard card, bool canActivate = false)
     {
+        CurrentCard = card;
         CardName.Text = card.Name;
         Grade.Value = card.Grade.ToString();
         Power.Value = card.Power.ToString();
@@ -39,8 +53,11 @@ public partial class CardInfo : Control
         {
             Skills.Text = VanguardSkillToStringInterpreter.ExtractSkills(card.Skills);
         }
+        ActivateButton.Visible = ShowActivateButton && card.HasActivationSkill;
+        ActivateButton.Disabled = !canActivate;
 
         Show();
     }
-    
+
+    public event Action<VanguardCard>? ActivationPressed;
 }
